# rust-docker-starter

./: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yml  test.http
src/: main.rs
src/middleware/: mod.rs  say_hi_middleware.rs
