[package]
name = "shop-project-api-items-rust"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "app"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "22.0.0"
chrono = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
actix-web = "3"
serde = "1"
r2d2 = "0.8.9"

[dependencies.r2d2_mysql]
git = "https://github.com/outersky/r2d2-mysql"
version="21.0.0"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.3"
